--- a/Config/templates/login.html
+++ b/Config/templates/login.html
@@ -25,13 +25,26 @@
                      <div class="login-right-wrap">
                         <h1>Login</h1>
                         <p class="account-subtitle">Access to our dashboard</p>
-                        <form action="https://preschool.dreamguystech.com/html-template/index.html">
+                        <form action="{% url 'doLogin' %}" method="post">
+                           {% csrf_token %}
                            <div class="form-group">
-                              <input class="form-control" type="text" placeholder="Email">
+                              <input class="form-control" type="text" placeholder="Email" name="email">
                            </div>
                            <div class="form-group">
-                              <input class="form-control" type="text" placeholder="Password">
+                              <input class="form-control" type="password" placeholder="Password" name="password">
                            </div>
+                           {% if messages %}
+                           {% for message in messages %}
+                           {% if message.tags == 'error' %}
+                           <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                              {{message}}
+                              <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                              </button>
+                            </div>
+                            {% endif %}
+                            {% endfor %}
+                            {% endif %}
                            <div class="form-group">
                               <button class="btn btn-primary btn-block" type="submit">Login</button>
                            </div>
