--- a/Config/templates/includes/header.html
+++ b/Config/templates/includes/header.html
@@ -11,11 +11,8 @@
     <a href="javascript:void(0);" id="toggle_btn">
     <i class="fas fa-align-left"></i>
     </a>
-    <div class="top-nav-search">
-       <form>
-          <input type="text" class="form-control" placeholder="Search here">
-          <button class="btn" type="submit"><i class="fas fa-search"></i></button>
-       </form>
+    <div class="top-nav-search mt-3">
+       <h4 ><storng>Welcome</storg>&nbsp; &nbsp;<span>{{user.first_name}}{{user.last_name}} &nbsp;!</span></h4>
     </div>
     <a class="mobile_btn" id="mobile_btn">
     <i class="fas fa-bars"></i>
@@ -101,13 +98,20 @@
                    <img src="{% static 'assets/img/profiles/avatar-01.jpg' %}" alt="User Image" class="avatar-img rounded-circle">
                 </div>
                 <div class="user-text">
-                   <h6>Ryan Taylor</h6>
-                   <p class="text-muted mb-0">Administrator</p>
+                   <h6>{{user.first_name}}&nbsp;{{user.last_name}}</h6>
+                   {% if user.user_type == '1' %}
+                   <p class="text-muted mb-0">Head Of Department</p>
+                   {% elif  user.user_type == '2' %}
+                   <p class="text-muted mb-0">Staff</p>
+                   {% else %}
+                   <p class="text-muted mb-0">Student</p>
+                   {% endif %}
+                   
                 </div>
              </div>
              <a class="dropdown-item" href="profile.html">My Profile</a>
              <a class="dropdown-item" href="inbox.html">Inbox</a>
-             <a class="dropdown-item" href="login.html">Logout</a>
+             <a class="dropdown-item" href="{% url 'Logout' %}">Logout</a>
           </div>
        </li>
     </ul>
