--- a/Config/templates/includes/sidebar.html
+++ b/Config/templates/includes/sidebar.html
@@ -6,7 +6,7 @@
              <li class="menu-title">
                 <span>Main Menu</span>
                 <li>
-                  <a href="holiday.html"><i class="fas fa-holly-berry"></i> <span>Dashboard</span></a>
+                  <a href="holiday.html"><i class="fas fa-house-user"></i> <span>Dashboard</span></a>
                </li>
              <li class="submenu">
                 <a href="#"><i class="fas fa-user-graduate"></i> <span> Students</span> <span class="menu-arrow"></span></a>
@@ -41,22 +41,22 @@
                 </ul>
              </li>
              <li>
-               <a href="holiday.html"><i class="fas fa-holly-berry"></i> <span>View Attendens</span></a>
+               <a href="holiday.html"><i class="fa fa-calendar"></i> <span>View Attendens</span></a>
             </li>
             <li>
-               <a href="holiday.html"><i class="fas fa-holly-berry"></i> <span>Staff Fedback</span></a>
+               <a href="holiday.html"><i class="fa fa-comments"></i> <span>Staff Fedback</span></a>
             </li>
             <li>
-               <a href="holiday.html"><i class="fas fa-holly-berry"></i> <span>Student Fedback</span></a>
+               <a href="holiday.html"><i class="fa fa-comments"></i> <span>Student Fedback</span></a>
             </li>
             <li>
-               <a href="holiday.html"><i class="fas fa-holly-berry"></i> <span>Staff Leave</span></a>
+               <a href="holiday.html"><i class="fas fa-envelope"></i> <span>Staff Leave</span></a>
             </li>
             <li>
-               <a href="holiday.html"><i class="fas fa-holly-berry"></i> <span>Student Leave</span></a>
+               <a href="holiday.html"><i class="fas fa-envelope"></i> <span>Student Leave</span></a>
             </li>
             <li>
-               <a href="holiday.html"><i class="fas fa-holly-berry"></i> <span>Logout</span></a>
+               <a href="{% url 'Logout' %}"><i class="fas fa-sign-out-alt"></i><span>Logout</span></a>
             </li>
           </ul>
        </div>
