--- a/Config/templates/includes/header.html
+++ b/Config/templates/includes/header.html
@@ -1,7 +1,7 @@
 {% load static %}
 <div class="header">
     <div class="header-left">
-       <a href="index.html" class="logo">
+       <a href="{% url 'hod_home' %}" class="logo">
        <img src="{% static 'assets/img/logo.png' %}" alt="Logo">
        </a>
        <a href="index.html" class="logo logo-small">
@@ -90,12 +90,20 @@
        </li>
        <li class="nav-item dropdown has-arrow">
           <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
+            {% if user.profile_pic == "" %}
+            <span class="user-img"><img class="rounded-circle" src="{% static 'assets/img/noimg.jpg' %}" width="31" alt="Ryan Taylor"></span>
+            {% else %}
           <span class="user-img"><img class="rounded-circle" src="/{{user.profile_pic}}" width="31" alt="Ryan Taylor"></span>
-          </a>
+            {% endif %}
+         </a>
           <div class="dropdown-menu">
              <div class="user-header">
                 <div class="avatar avatar-sm">
+                  {% if user.profile_pic == "" %}
+                  <span class="user-img"><img class="rounded-circle" src="{% static 'assets/img/noimg.jpg' %}" width="31" alt="Ryan Taylor"></span>
+                  {% else %}
                    <img src="/{{user.profile_pic}}" alt="User Image" class="avatar-img rounded-circle">
+                   {% endif %}
                 </div>
                 <div class="user-text">
                    <h6>{{user.first_name}}&nbsp;{{user.last_name}}</h6>
