--- a/Config/templates/Hod/view_staff.html
+++ b/Config/templates/Hod/view_staff.html
@@ -4,15 +4,15 @@
     <div class="page-header">
        <div class="row align-items-center">
           <div class="col">
-             <h3 class="page-title">Students</h3>
+             <h3 class="page-title">Staff</h3>
              <ul class="breadcrumb">
-                <li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
-                <li class="breadcrumb-item active">Students</li>
+                <li class="breadcrumb-item"><a href="{% url 'hod_home' %}">Dashboard</a></li>
+                <li class="breadcrumb-item active">Staff</li>
              </ul>
           </div>
           
           <div class="col-auto text-right float-right ml-auto">
-             <a href="{% url 'add_student' %}" class="btn btn-primary"><i class="fas fa-plus"></i></a>
+             <a href="{% url 'add_staff' %}" class="btn btn-primary"><i class="fas fa-plus"></i></a>
           </div>
        </div>
     </div>
@@ -28,17 +28,15 @@
                             <th>ID</th>
                             <th>Name</th>
                             <th>Email</th>
-                            <th>Course</th>
                             <th>Gender</th>
                             <th>Address</th>
-                            <th>Session Year</th>
                             <th>Created_at</th>
                            <th>updated_at</th>
                             <th class="text-right">Action</th>
                          </tr>
                       </thead>
                       <tbody>
-                        {% for i in student %}
+                        {% for i in staff %}
                          <tr>
                             <td>{{i.id}}</td>
                             <td>
@@ -48,18 +46,16 @@
                                </h2>
                             </td>
                             <td>{{i.admin.email}}</td>
-                            <td>{{i.course_id.name}}</td>
                             <td>{{i.gender}}</td>
                             <td>{{i.address}}</td>
-                            <td>{{i.session_year_id.session_start}} To {{i.session_year_id.session_end}}</td>
                             <td>{{i.created_at}}</td>
                            <td>{{i.updated_at}}</td>
                             <td class="text-right">
                                <div class="actions">
-                                  <a href="{% url 'edit_student' i.id %}" class="btn btn-sm bg-success-light mr-2">
+                                  <a href="{% url 'edit_staff' i.id %}" class="btn btn-sm bg-success-light mr-2">
                                   <i class="fas fa-pen"></i>
                                   </a>
-                                  <a href="{% url 'delete_student' i.admin.id %}" class="btn btn-sm bg-danger-light">
+                                  <a href="{% url 'delete_staff' i.id %}" class="btn btn-sm bg-danger-light">
                                   <i class="fas fa-trash"></i>
                                   </a>
                                </div>
