--- a/Config/templates/Hod/view_staff.html
+++ b/Config/templates/Hod/view_staff.html
@@ -31,7 +31,7 @@
                             <th>Gender</th>
                             <th>Address</th>
                             <th>Created_at</th>
-                           <th>updated_at</th>
+                           <th>Updated_at</th>
                             <th class="text-right">Action</th>
                          </tr>
                       </thead>
