--- a/Config/templates/includes/sidebar.html
+++ b/Config/templates/includes/sidebar.html
@@ -33,7 +33,7 @@
                 <a href="#"><i class="fa fa-book-open"></i> <span> Subject</span> <span class="menu-arrow"></span></a>
                 <ul>
                    <li><a href="{% url 'add_subject' %}"> Add Subject</a></li>
-                   <li><a href="#">View Subject</a></li>
+                   <li><a href="{% url 'view_subject' %}">View Subject</a></li>
                 </ul>
              </li>
              <li>
