--- a/Config/templates/Hod/add_subject.html
+++ b/Config/templates/Hod/add_subject.html
@@ -12,11 +12,13 @@
           </div>
        </div>
     </div>
+    {% include 'includes/messages.html' %}
     <div class="row">
        <div class="col-sm-12">
           <div class="card">
              <div class="card-body">
-                <form>
+                <form method="post" action="{% url 'add_subject' %}">
+                    {% csrf_token %}
                    <div class="row">
                       <div class="col-12">
                          <h5 class="form-title"><span>Subject Information</span></h5>
@@ -24,7 +26,7 @@
                       <div class="col-12 col-sm-6">
                          <div class="form-group">
                             <label>Subject Name</label>
-                            <input type="text" class="form-control">
+                            <input type="text" name="subject_name" class="form-control" required>
                          </div>
                       </div>
                       <div class="col-12 col-sm-6">
@@ -41,10 +43,10 @@
                       <div class="col-12 col-sm-6">
                          <div class="form-group">
                             <label>Staff</label>
-                            <select class="form-control" name="course_id" required>
+                            <select class="form-control" name="staff_id" required>
                                 <option>Select Staff</option>
-                                 {% for i in course %}
-                                <option value="{{i.id}}">{{i.name}}</option>
+                                 {% for i in staff %}
+                                <option value="{{i.id}}">{{i.admin.first_name}} {{i.admin.last_name}}</option>
                                  {% endfor %}
                              </select>
                          </div>
