--- a/Config/templates/Hod/view_student.html
+++ b/Config/templates/Hod/view_student.html
@@ -6,7 +6,7 @@
           <div class="col">
              <h3 class="page-title">Students</h3>
              <ul class="breadcrumb">
-                <li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
+                <li class="breadcrumb-item"><a href="{% url 'hod_home' %}">Dashboard</a></li>
                 <li class="breadcrumb-item active">Students</li>
              </ul>
           </div>
@@ -33,7 +33,7 @@
                             <th>Address</th>
                             <th>Session Year</th>
                             <th>Created_at</th>
-                           <th>updated_at</th>
+                           <th>Updated_at</th>
                             <th class="text-right">Action</th>
                          </tr>
                       </thead>
