--- a/Config/templates/Hod/view_subject.html
+++ b/Config/templates/Hod/view_subject.html
@@ -48,7 +48,7 @@
                                   <a href="{% url 'edit_subject' i.id %}" class="btn btn-sm bg-success-light mr-2">
                                   <i class="fas fa-pen"></i>
                                   </a>
-                                  <a href="{% url 'delete_course' i.id %}" class="btn btn-sm bg-danger-light">
+                                  <a href="{% url 'delete_subject' i.id %}" class="btn btn-sm bg-danger-light">
                                     <i class="fas fa-trash"></i>
                                 </a>
                                </div>
