--- a/Config/templates/Hod/edit_subject.html
+++ b/Config/templates/Hod/edit_subject.html
@@ -17,7 +17,7 @@
        <div class="col-sm-12">
           <div class="card">
              <div class="card-body">
-                <form method="post" action="{% url 'add_subject' %}">
+                <form method="post" action="{% url 'update_subject' %}">
                     {% csrf_token %}
                    <div class="row">
                       <div class="col-12">
