--- a/Config/templates/includes/sidebar.html
+++ b/Config/templates/includes/sidebar.html
@@ -1,42 +1,56 @@
-{% load static %}
+{% load active_link_tags %}
 <div class="sidebar" id="sidebar">
     <div class="sidebar-inner slimscroll">
        <div id="sidebar-menu" class="sidebar-menu">
+         {% if user.user_type == '1' %}
           <ul>
              <li class="menu-title">
                 <span>Main Menu</span>
-                <li>
+                <li class={% active_link 'hod_home' 'active'%}>
                   <a href="{% url 'hod_home' %}"><i class="fas fa-house-user"></i> <span>Dashboard</span></a>
                </li>
-             <li class="submenu">
+             <li class="submenu {% active_link 'add_student' 'active'%} {% active_link 'view_student' 'active'%}" >
                 <a href="#"><i class="fas fa-user-graduate"></i> <span> Students</span> <span class="menu-arrow"></span></a>
                 <ul>
-                   <li><a href="{% url 'add_student' %}">Add Student</a></li>
+                   <li ><a href="{% url 'add_student' %}">Add Student</a></li>
                    <li><a href="{% url 'view_student' %}">View Student</a></li>
                 </ul>
              </li>
-             <li class="submenu">
+             <li class="submenu {% active_link 'add_staff' 'active'%} {% active_link 'view_staff' 'active'%}">
                 <a href="#"><i class="fas fa-chalkboard-teacher"></i> <span> Staff</span> <span class="menu-arrow"></span></a>
                 <ul>
                    <li><a href="{% url 'add_staff' %}">Add Staff</a></li>
                    <li><a href="{% url 'view_staff' %}">View Staff</a></li>
                 </ul>
              </li>
-             <li class="submenu">
+             <li class="submenu {% active_link 'add_course' 'active'%} {% active_link 'view_course' 'active'%}">
                 <a href="#"><i class="fa fa-graduation-cap"></i> <span> Course</span> <span class="menu-arrow"></span></a>
                 <ul>
                    <li><a href="{% url 'add_course' %}">Add Course</a></li>
                    <li><a href="{% url 'view_course' %}">View Course</a></li>
                 </ul>
              </li>
-             <li class="submenu">
+             <li class="submenu {% active_link 'add_subject' 'active'%} {% active_link 'add_subject' 'active'%}">
                 <a href="#"><i class="fa fa-book-open"></i> <span> Subject</span> <span class="menu-arrow"></span></a>
                 <ul>
                    <li><a href="{% url 'add_subject' %}"> Add Subject</a></li>
-                   <li><a href="{% url 'view_subject' %}">View Subject</a></li>
+                   <li><a href="{% url 'add_subject' %}">View Subject</a></li>
                 </ul>
              </li>
+             <li class="submenu {% active_link 'add_session' 'active'%} {% active_link 'view_session' 'active'%}">
+               <a href="#"><i class="fa fa-book-open"></i> <span>Session</span> <span class="menu-arrow"></span></a>
+               <ul>
+                  <li><a href="{% url 'add_session' %}"> Add Session</a></li>
+                  <li><a href="{% url 'view_session' %}">View Session</a></li>
+               </ul>
+            </li>
              <li>
+               <a href="{% url 'staff_send_notification' %}"><i class="fa fa-bell"></i><span>Sent Staff Notification</span></a>
+            </li>
+            <li>
+               <a href="holiday.html"><i class="fa fa-bell"></i><span>Sent Student Notification</span></a>
+            </li>
+            <li>
                <a href="holiday.html"><i class="fa fa-calendar"></i> <span>View Attendens</span></a>
             </li>
             <li>
@@ -55,6 +69,48 @@
                <a href="{% url 'Logout' %}"><i class="fas fa-sign-out-alt"></i><span>Logout</span></a>
             </li>
           </ul>
+         {% elif user.user_type == '2' %}
+         
+         <ul>
+            <li class="menu-title">
+               <span>Main Menu</span>
+               <li class={% active_link 'hod_home' 'active'%}>
+                 <a href="{% url 'hod_home' %}"><i class="fas fa-house-user"></i> <span>Dashboard</span></a>
+              </li>
+            </li>
+            
+               <li class={% active_link 'hod_home' 'active'%}>
+                 <a href="{% url 'hod_home' %}"><i class="fas fa-calendar-alt"></i> <span>Take Attendens</span></a>
+              </li>
+
+               <li class={% active_link 'hod_home' 'active'%}>
+                 <a href="{% url 'hod_home' %}"><i class="fas fa-calendar-alt"></i> <span>View / Update Attendens</span></a>
+              </li>
+            
+               <li class={% active_link 'hod_home' 'active'%}>
+                 <a href="{% url 'hod_home' %}"><i class="fas fa-poll-h"></i> <span>Add Result</span></a>
+               </li>
+            
+               <li class={% active_link 'hod_home' 'active'%}>
+                 <a href="{% url 'hod_home' %}"><i class="fas fa-envelope-open"></i> <span>Apply For Leave</span></a>
+              </li>
+
+               <li class={% active_link 'hod_home' 'active'%}>
+                 <a href="{% url 'hod_home' %}"><i class="fas fa-comments"></i> <span>Send Feedback</span></a>
+               </li>
+               
+               <li class={% active_link 'notifications' 'active'%}>
+                  <a href="{% url 'notifications' %}"><i class="fas fa-bell"></i> <span>Notification</span></a>
+                </li>
+
+            <li>
+               <a href="{% url 'Logout' %}"><i class="fas fa-sign-out-alt"></i><span>Logout</span></a>
+            </li>
+            
+         </ul>
+         {% else %}
+
+         {% endif %}
        </div>
     </div>
  </div>
