--- a/Config/templates/Hod/view_session.html
+++ b/Config/templates/Hod/view_session.html
@@ -4,15 +4,15 @@
     <div class="page-header">
        <div class="row align-items-center">
           <div class="col">
-             <h3 class="page-title">Staff</h3>
+             <h3 class="page-title">Session</h3>
              <ul class="breadcrumb">
                 <li class="breadcrumb-item"><a href="{% url 'hod_home' %}">Dashboard</a></li>
-                <li class="breadcrumb-item active">Staff</li>
+                <li class="breadcrumb-item active">View Session</li>
              </ul>
           </div>
           
           <div class="col-auto text-right float-right ml-auto">
-             <a href="{% url 'add_staff' %}" class="btn btn-primary"><i class="fas fa-plus"></i></a>
+             <a href="{% url 'add_session' %}" class="btn btn-primary"><i class="fas fa-plus"></i></a>
           </div>
        </div>
     </div>
@@ -26,36 +26,23 @@
                       <thead>
                          <tr>
                             <th>ID</th>
-                            <th>Name</th>
-                            <th>Email</th>
-                            <th>Gender</th>
-                            <th>Address</th>
-                            <th>Created_at</th>
-                           <th>Updated_at</th>
+                            <th>Session Year Start</th>
+                            <th>Session Year Start</th>
                             <th class="text-right">Action</th>
                          </tr>
                       </thead>
                       <tbody>
-                        {% for i in staff %}
+                        {% for i in session %}
                          <tr>
                             <td>{{i.id}}</td>
-                            <td>
-                               <h2 class="table-avatar">
-                                  <a href="student-details.html" class="avatar avatar-sm mr-2"><img class="avatar-img rounded-circle" src="/{{i.admin.profile_pic}}" alt="User Image"></a>
-                                  <a href="student-details.html">{{i.admin.first_name}} {{i.admin.last_name}}</a>
-                               </h2>
-                            </td>
-                            <td>{{i.admin.email}}</td>
-                            <td>{{i.gender}}</td>
-                            <td>{{i.address}}</td>
-                            <td>{{i.created_at}}</td>
-                           <td>{{i.updated_at}}</td>
+                            <td>{{i.session_start}}</td>
+                            <td>{{i.session_end}}</td>
                             <td class="text-right">
                                <div class="actions">
-                                  <a href="{% url 'edit_staff' i.id %}" class="btn btn-sm bg-success-light mr-2">
+                                  <a href="{% url 'edit_session' i.id %}" class="btn btn-sm bg-success-light mr-2">
                                   <i class="fas fa-pen"></i>
                                   </a>
-                                  <a href="{% url 'delete_staff' i.id %}" class="btn btn-sm bg-danger-light">
+                                  <a href="{% url 'delete_session' i.id %}" class="btn btn-sm bg-danger-light">
                                   <i class="fas fa-trash"></i>
                                   </a>
                                </div>
@@ -69,7 +56,4 @@
           </div>
        </div>
     </div>
-
-
-
 {% endblock content %}
