--- a/Config/templates/includes/messages.html
+++ b/Config/templates/includes/messages.html
@@ -1,7 +1,7 @@
 {% if messages %}
                         {% for message in messages %}
                            {% if message.tags == 'error' %}
-                           <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                           <div class="alert alert-danger" role="alert">
                               {{message}}
                               <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
@@ -15,7 +15,7 @@
                     {% if messages %}
                         {% for message in messages %}
                             {% if message.tags == 'success' %}
-                            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                            <div class="alert alert-success" role="alert">
                                {{message}}
                                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                                  <span aria-hidden="true">&times;</span>
